<resources>
    <string name="app_name">视爱</string>
    <string name="find">发现</string>
    <string name="message">消息</string>
    <string name="follow">动态</string>
    <string name="manager">我的</string>

    <!--系统提示-->
    <string name="server_error">系统忙，请稍后重试</string>
    <string name="network_error">网络不通，请检查后重试</string>
    <string name="network_timeout_error">网络连接超时，请稍后重试</string>
    <string name="unknown_error">系统异常，请稍后重试</string>
    <string name="my_video">我的视频</string>
    <string name="my_information">我的资料</string>
    <string name="nick_name">昵称</string>
    <string name="nick_name_is_null">昵称不能为空!</string>
    <string name="work">职业</string>
    <string name="education">学历</string>
    <string name="address">所在城市</string>
    <string name="house">住房情况</string>
    <string name="marrary">婚姻状况</string>
    <string name="introduce">自我介绍</string>
    <string name="introduce_hint">请用一句话介绍自己...</string>
    <string name="sex">性别</string>
    <string name="all">全部</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="age">年龄</string>
    <string name="city">城市</string>
    <string name="select_city">请选择城市</string>
    <string name="video_title_hint">请设置视频简要说明...</string>
    <string name="user_info">个人信息</string>
    <string name="phone_number_hint">请输入手机号</string>
    <string name="code_number_hint">请输入验证码</string>
    <string name="phone_login">手机号快捷登录</string>
    <string name="get_code">获取验证码</string>
    <string name="phone_is_null">手机号不能为空!</string>
    <string name="code_is_null">验证码为空!</string>
    <string name="video_title_is_null">请输入简要视频介绍!</string>
    <string name="login_tips">未登录,请登录之后再操作!</string>
    <string name="login_success">登录成功!</string>
    <string name="follow_no_data">还没有动态信息哦，发布短视屏马上入驻吧~~</string>
    <string name="find_no_data">还没有小伙伴哦，发布短视屏马上入驻吧~~</string>
    <string name="message_no_data">还没有和其他童鞋打过招呼~快去找小伙伴high聊吧~~</string>
    <string name="no_next_page_data">没有下一页了～～</string>
    <string name="other_login_method">其他第三方帐号登录</string>
    <!--消息-->
    <string name="send">发送</string>
    <string name="send_message">发送消息</string>
    <string name="send_image">发送照片</string>
    <string name="message_no_connect">消息(未连接)</string>
    <string name="message_connecting">正在连接...</string>
    <string name="message_failed_connect">网络连接异常</string>
    <string name="sure_delete_message">确定要删除此消息吗?</string>
    <string name="audio_message">[语音]</string>
    <string name="image_message">[图片]</string>
    <string name="location_message">[位置]</string>
    <string name="retry_send_message">重发消息？</string>
    <string name="retry">重发</string>
    <!--视频-->
    <string name="record_long_click_tips">长按录制视频</string>
    <string name="network_connect_fail">当前网络不可用,请检查你的网络设置</string>
    <string name="network_connect">未能连接到互联网</string>
    <string name="network_connect_tip0">你的设备未启用移动网络或无线局域网</string>
    <string name="network_connect_tip1">如果需要连接到互联网,请参考以下几点:</string>
    <string name="network_connect_tip2">● 检查手机中的无线局域网设置,查看是否有可接入的无线局域网信号</string>
    <string name="network_connect_tip3">● 检查手机是否已接入移动网络,并且手机没有被停机</string>
    <string name="network_connect_tip4">如果你已接入无线局域网:</string>
    <string name="network_connect_tip5">● 请检查你所连接的无线局域网热点是否已接入互联网或者该热点以允许你的设备访问互联网</string>
    <string name="video_play">播放视频</string>
    <string name="upload_faile">上传失败!</string>
    <string name="video_see_love">视频表白</string>
    <string name="add_follow">添加关注</string>
    <string name="video_image">设置视频封面</string>
    <string name="select_video_image">请为您的视频设置一个漂亮的封面吧！</string>
    <!--设置-->
    <string name="take_photo">拍照</string>
    <string name="select_image">从相册选择</string>
    <string name="setting">系统设置</string>
    <string name="exit_login">退出当前帐号</string>
    <string name="exit_login_tips">是否退出当前帐号？</string>
    <string name="share_wechat">微信</string>
    <string name="share_wechat_space">朋友圈</string>
    <string name="share_qq">QQ</string>
    <string name="share_qq_space">QQ空间</string>
    <string name="share_sina_weibo_space">新浪微博</string>
    <string name="my_follow">我关注的</string>
    <string name="follow_my">关注我的</string>
    <!--分享-->
    <string name="share_success">分享成功</string>
    <string name="share_failure">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <!--上拉刷新,下拉加载更多-->
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <!--第三方登录注册-->
    <string name="token_from_weixin_success">微信开放平台获取数据成功</string>
    <string name="token_from_weixin_failure">微信开放平台获取数据失败</string>
    <string name="token_from_weixin_error">微信开放平台获取数据异常</string>
    <string name="weixin_not_install">您本地未安装微信或版本较低，请从应用商店下载安装后重试</string>
    <string name="qq_not_install">您本地未安装QQ或版本较低，请从应用商店下载安装后重试</string>
    <string name="weixin_code_deny">发送请求到微信开放平台：被拒绝</string>
    <string name="weixin_code_unknown">发送请求到微信开放平台：未知错误</string>
    <string name="qq_code_error">发送请求到QQ开放平台：错误</string>
    <string name="message_upchanle_audio">手指上滑, 取消发送</string>
    <string name="message_movechanle_audio">松开手指, 取消发送</string>
    <string name="message_pop_copy">拷贝</string>
    <string name="message_copy_sucess">复制成功</string>
    <string name="message_copy_error">复制失败</string>
    <string name="message_pop_repeat">转发</string>
    <string name="message_pop_delete">删除</string>
    <string name="message_pop_more">更多</string>
    <string name="message_repeat_to">确认转发给</string>
    <string name="cancel">取消</string>
    <string name="version_update">版本更新</string>
    <string name="update">更新</string>
    <string name="back">返回</string>
    <string name="prompt">提示</string>
    <string name="sure">确定</string>
    <string name="search_no_result">抱歉，未能找到结果</string>
    <string name="arroud_no_point">该周边没有热点</string>
    <string name="meet_fellowship_position">位置</string>
    <string name="about">关于</string>
    <string name="select_photos_no">一张图片没扫描到</string>
    <string name="select_photos_pre">只能选择4张图片</string>
    <string name="select_photos_pre_one">只能选择1张图片</string>
    <string name="select_pre">已选(</string>
    <string name="select_add">/4)</string>
    <string name="no_sdcard">暂无外部存储</string>
    <string name="image_load_faile">图片加载失败</string>
    <string name="loading">请求中</string>
    <string name="loading_video">视频加载中...</string>
    <string name="save_image">保存到相册</string>
    <string name="save_image_sucess">图片已保存至%1$s文件夹</string>
    <string name="save_image_faile">保存相册失败</string>
    <string name="location_information">位置信息</string>
    <string name="pre">张</string>
    <string name="select_photos">选择照片</string>
    <string name="user_login_failure">用户登录失败</string>
    <string name="user_create_failure">用户创建失败</string>
    <string name="user_find_all_failure">获取所有用户失败</string>
    <string name="find_all_failure">获取用户动态失败</string>
    <string name="user_update_success">用户信息更新成功</string>
    <string name="user_update_failure">用户信息更新失败</string>
    <string name="user_find_detail_failure">获取用户信息失败</string>
    <string name="delete_video_failure">删除视频失败</string>
    <string name="video_error">视频播放错误，请重试!</string>
</resources>
