<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/layout_30dp"
    android:layout_marginRight="@dimen/layout_30dp"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:minWidth="@dimen/layout_280dp"
    android:orientation="vertical"
    android:padding="@dimen/layout_10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/sex"
        android:textColor="@color/font_black"
        android:textSize="@dimen/font_16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/allSex"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_30dp"
            android:layout_margin="@dimen/layout_10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_corners_button_red_7a"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15sp" />

        <Button
            android:id="@+id/manSex"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_30dp"
            android:layout_margin="@dimen/layout_10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_corners_button_red_7a"
            android:gravity="center"
            android:text="@string/man"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15sp" />

        <Button
            android:id="@+id/womenSex"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_30dp"
            android:layout_margin="@dimen/layout_10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_corners_button_red_7a"
            android:gravity="center"
            android:text="@string/women"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/age"
        android:textColor="@color/font_black"
        android:textSize="@dimen/font_16sp" />

    <com.tianyu.seelove.view.RangeSeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/city"
            android:textColor="@color/font_black"
            android:textSize="@dimen/font_16sp" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="@dimen/layout_100dp"
            android:layout_height="@dimen/layout_30dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/layout_8dp"
            android:layout_marginRight="@dimen/layout_5dp"
            android:layout_marginTop="@dimen/layout_8dp"
            android:background="@drawable/shape_corners_button_gray"
            android:drawableRight="@mipmap/icon_down"
            android:gravity="center"
            android:paddingRight="@dimen/layout_10dp"
            android:text="@string/select_city"
            android:textColor="@color/gray_73"
            android:textSize="@dimen/font_14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_1dp"
        android:layout_marginTop="@dimen/layout_5dp"
        android:background="@color/bg_grey_da"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelTV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/layout_5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16sp" />

        <View
            android:id="@+id/line_layout"
            android:layout_width="@dimen/layout_1dp"
            android:layout_height="match_parent"
            android:background="@color/bg_grey_da" />

        <TextView
            android:id="@+id/sureTV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/layout_5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16sp" />
    </LinearLayout>
</LinearLayout>