<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/bottom_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:text="@string/take_photo"
            android:textColor="@color/red_7a"
            android:textSize="@dimen/font_18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_white_f4" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:text="@string/select_image"
            android:textColor="@color/red_7a"
            android:textSize="@dimen/font_18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/bg_white_f4" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/font_black"
            android:textSize="@dimen/font_18sp" />
    </LinearLayout>
</RelativeLayout>