<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_e5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/tab_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0" />

        <RadioGroup
            android:id="@+id/tabs_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_60dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/layout_5dp"
            android:paddingTop="@dimen/layout_5dp">

            <RadioButton
                android:id="@+id/tab_find"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@mipmap/ic_launcher"
                android:gravity="center"
                android:text="@string/find"
                android:textColor="@color/black"
                android:textSize="@dimen/font_13sp" />

            <RadioButton
                android:id="@+id/tab_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:drawableTop="@mipmap/ic_launcher"
                android:gravity="center"
                android:text="@string/message"
                android:textColor="@color/black"
                android:textSize="@dimen/font_13sp" />

            <RadioButton
                android:id="@+id/tab_follow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:drawableTop="@mipmap/ic_launcher"
                android:gravity="center"
                android:text="@string/follow"
                android:textColor="@color/black"
                android:textSize="@dimen/font_13sp" />

            <RadioButton
                android:id="@+id/tab_manager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:drawableTop="@mipmap/ic_launcher"
                android:gravity="center"
                android:text="@string/manager"
                android:textColor="@color/black"
                android:textSize="@dimen/font_13sp" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>